--- a/package.json
+++ b/package.json
@@ -12,19 +12,20 @@
     "postinstall": "yarn build"
   },
   "dependencies": {
-    "axios": "^0.18.0",
+    "axios": "^0.21.1",
     "vue": "^2.5.13",
+    "vue-autofocus-directive": "^1.0.4",
     "vue-material": "^1.0.0-beta-14",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^3.0.0-beta.6",
+    "@vue/cli-plugin-babel": "^3.12.1",
     "@vue/cli-plugin-eslint": "^3.0.0-beta.6",
-    "@vue/cli-service": "^3.0.0-beta.6",
+    "@vue/cli-service": "^4.5.10",
     "@vue/eslint-config-standard": "^3.0.0-beta.6",
     "lint-staged": "^6.0.0",
-    "node-sass": "^4.7.2",
+    "node-sass": "^4.14.1",
     "sass-loader": "^6.0.6",
     "vue-template-compiler": "^2.5.13"
   },
